# inertial_body

./: .clang-format  .gitignore  CMakeLists.txt  InertialBody.cpp  InertialBody.h  README.md  main.cpp
core/: CMakeLists.txt
core/cmake/: inertial_bodyConfig.cmake.in
core/include/inertial_body/: InertialBody.h
core/logger/: Logger.h
core/src/: InertialBody.cpp
cpp/: config.h.in
logger/: Logger.h
python/: CMakeLists.txt  main.py  pyproject.toml  requirements.txt
python/app/: main.py
python/inertial_body_py/: __init__.py  bindings.cpp
python/inertial_body_py_dev/: bindings.cpp
