[build-system]
requires = [
  "scikit-build-core>=0.9",
  "pybind11>=2.11",
  "numpy"
]
build-backend = "scikit_build_core.build"

[project]
name = "inertial-body"
version = "0.1.0"
description = "Inertial body easing core with C++ / pybind11"
requires-python = ">=3.9"

dependencies = [
  "PyQt6",
  "pyqtgraph",
  "numpy"
]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.verbose = true
cmake.build-type = "Release"

[tool.scikit-build.wheel]
packages = ["inertial_body_py"]